# hudson

./: AATrader.cpp  AATrader.hpp  BOWTrader.cpp  BOWTrader.hpp  BarraDriver.cpp  BnHTrader.cpp  BnHTrader.hpp  CMakeLists.txt  COPYING  DMYCloseDriver.cpp  DayPrice.hpp  DaySeries.cpp  DaySeries.hpp  Doxyfile  EODSeries.cpp  EODSeries.hpp  EOMReport.cpp  EOMReport.hpp  EOMReturnFactors.cpp  EOMReturnFactors.hpp  EOMTrader.cpp  EOMTrader.hpp  EOWTrader.hpp  Execution.cpp  Execution.hpp  ExecutionSet.cpp  ExecutionSet.hpp  FileDriver.hpp  Hudson.dev  Hudson.sln  Hudson.vcproj  INSTALL  JanTrader.cpp  JanTrader.hpp  LongPosition.cpp  LongPosition.hpp  Makefile  Makefile.cygwin  Makefile.macos  NAREITDriver.hpp  (+50 more)
app/AATrader/: AATrader.cpp  AATrader.hpp  AATrader.ncb  Makefile  aa.cpp
app/AATraderMACD/: AATraderMACD.hpp
app/BOWTrader/: BOWTrader.cpp  BOWTrader.hpp  BOWTrader.ncb  bow.cpp
app/EOMTrader/: Makefile  eom.cpp
app/JanTrader/: JanTrader.cpp  JanTrader.hpp  JanTrader.ncb  JanTrader.vcproj  Makefile  jan.cpp
app/VIXTrader/: Makefile  VIXTrader.ncb
db/: DFSCX.csv  EAFE.csv  NAREIT_All.csv  OEX.csv  README  SOURCES  SOURCES.txt  SPX.csv  TNX.csv  VIX.csv  args.hpp  create_eoddb.sql  eodstats.cpp  stats.cpp  stats.hpp  tickers  yahoo2hdb.sh  yahoofetch.sh
db/NAREIT/: NAREIT.xls
examples/AATrader/: AATrader.hpp  aa.cpp
examples/BOWTrader/: BOWTrader.cpp
examples/VIXTrader/: vix.cpp
lib/: BnHTrader.cpp  CMakeLists.txt  DMYCloseDriver.hpp  Database.cpp  Database.hpp  DayPrice.hpp  EODDB.hpp  EODSeries.cpp  EODSeries.hpp  EOMReturnFactors.cpp  EOMReturnFactors.hpp  EOWSeries.cpp  Execution.cpp  Execution.hpp  ExecutionSet.cpp  ExecutionSet.hpp  FileDriver.hpp  Hudson.vcproj  LongPosition.cpp  LongPosition.hpp  Makefile  MonthPrice.hpp  PortfolioReport.cpp  PortfolioReturns.cpp  PortfolioReturns.hpp  Position.cpp  Position.hpp  PositionFactors.cpp  PositionFactors.hpp  PositionFactorsSet.cpp  PositionFactorsSet.hpp  PositionSet.cpp  PositionSet.hpp  PositionsReport.cpp  PositionsReport.hpp  Price.cpp  Price.hpp  Report.cpp  Report.hpp  ReturnFactors.cpp  (+16 more)
trunk/: AATrader.cpp  AATrader.hpp  AUTHORS  BOWTrader.cpp  BOWTrader.hpp  BarraDriver.cpp  BarraDriver.hpp  BnHTrader.hpp  CMakeLists.txt  DMYCloseDriver.cpp  DMYCloseDriver.hpp  DayPrice.hpp  DaySeries.cpp  DaySeries.hpp  Doxyfile  EODSeries.cpp  EODSeries.hpp  EOM.dev  EOMReport.cpp  EOMReport.hpp  EOMReturnFactors.cpp  EOMReturnFactors.hpp  EOMTrader.cpp  EOMTrader.hpp  EOWTrader.cpp  EOWTrader.hpp  Execution.cpp  Execution.hpp  ExecutionSet.cpp  ExecutionSet.hpp  FileDriver.hpp  Hudson.dev  Hudson.sln  Hudson.vcproj  JanTrader.hpp  LongPosition.cpp  LongPosition.hpp  Makefile  Makefile.cygwin  Makefile.macos  (+48 more)
trunk/app/AATrader/: Makefile  aa.cpp
trunk/app/AATraderMACD/: AATraderMACD.cpp  AATraderMACD.ncb  Makefile  aaMACD.cpp
trunk/app/BOWTrader/: BOWTrader.hpp
trunk/app/EOMTrader/: EOMTrader.cpp  eom.cpp
trunk/app/JanTrader/: JanTrader old report.txt  JanTrader.cpp  JanTrader.hpp  JanTrader.vcproj  Makefile  jan.cpp  jan_matrix.cpp
trunk/db/: DJC.csv  EAFE.csv  NAREIT_All.csv  NDX.csv  SPX.csv  VIX.csv  VXN.csv  VXO.csv  args.hpp  create_eoddb.sql  eodstats.cpp  stats.cpp  tickers  yahoo2hdb.awk  yahoo2hdb.sql
trunk/lib/: BnHTrader.cpp  BnHTrader.hpp  CMakeLists.txt  DMYCloseDriver.cpp  DMYCloseDriver.hpp  Database.hpp  DayPrice.hpp  EODDB.cpp  EODDB.hpp  EODSeries.cpp  EODSeries.hpp  EOMReport.cpp  EOMReport.hpp  EOMReturnFactors.cpp  EOMReturnFactors.hpp  EOMSeries.cpp  EOMSeries.hpp  EOWSeries.cpp  EOWSeries.hpp  Execution.cpp  Execution.hpp  ExecutionNotifier.cpp  ExecutionSet.cpp  ExecutionSet.hpp  Hudson.ncb  Hudson.vcproj  LongPosition.cpp  LongPosition.hpp  Makefile  PortfolioReport.cpp  PortfolioReport.hpp  PortfolioReturns.cpp  Position.cpp  Position.hpp  PositionFactors.cpp  PositionFactors.hpp  PositionFactorsSet.cpp  PositionFactorsSet.hpp  PositionSet.cpp  PositionSet.hpp  (+24 more)
wiki/: Release.wiki
(+9 files in other folders)
